tests/valid_programs/variables/var2.duck
fn main() {
    let x: String = "hallo";
    std::io::println(x);
}
