tests/errors/typechecker/require_string_array_give_int.duck
fn main() {
    let x: String[] = 1;
}
